--- a/src/main/resources/apache-deltaspike-tmpl.properties
+++ b/src/main/resources/apache-deltaspike-tmpl.properties
@@ -36,3 +36,10 @@ USER_ID_TOKEN=user_id_token
 
 FACEBOOK_PROVIDER_NAME=graph.facebook.com
 FACEBOOK_ACCESS_TOKEN_NAME=facebook_access_token
+
+FB_SCOPE=email,user_birthday,user_friends,user_about_me,user_location
+FB_FIELDS=id,email,first_name,last_name,middle_name,gender,birthday,hometown,about,location,relationship_status,timezone,locale,verified,currency,religion
+FB_API_GRAPH=https://graph.facebook.com
+FB_API_OAUTH_PATH=oauth/access_token
+FB_API_VERSION=v2.5
+TEMP_PASSWORD_SECRET=123
